fix: vertical align img feature page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1167,7 +1167,6 @@ article img :first-of-type :hover,
 }
 
 .page-support-featured-sections img {
-  vertical-align: middle;
   border-style: none;
   max-width: 100px;
   display: block;
